# mofax

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
data/: pbmc10k_celltypes.csv
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/notebooks/: getting_started_pbmc10k.ipynb  project_data.ipynb
mofax/: __init__.py  core.py  plot.py  plot_data.py  plot_factors.py  plot_mefisto.py  plot_utils.py  plot_variance.py  plot_weights.py  util.py  utils.py
mpp/: __init__.py  core.py  plot.py
notebooks/: getting_started_pbmc10k.ipynb  training_pbmc10k.ipynb
tests/: test_core.py
