[build-system]
# requires = ["flit"]
# build-backend = "flit.buildapi"
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mofax"
version = "0.3.0"
description = "Work with MOFA+ models in Python"
authors = ["Danila Bredikhin <danila.bredikhin@embl.de>"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[tool.flit.metadata]
module = "mofax"
author = "Danila Bredikhin"
author-email = "danila.bredikhin@embl.de"
home-page = "https://github.com/gtca/mofax"
